--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
   client:
-    image: "doc20az/multi-client"
+    image: "doc20az/multi-client:latest"
     mem_limit: 128m
     hostname: client
   backend:
-    image: "doc20az/multi-server"
+    image: "doc20az/multi-server:latest"
     mem_limit: 128m
     hostname: backend
     environment:
@@ -17,14 +17,14 @@ services:
       - PGPASSWORD=$PGPASSWORD
       - PGPORT=$PGPORT
   worker:
-    image: "doc20az/multi-worker"
+    image: "doc20az/multi-worker:latest"
     mem_limit: 128m
     hostname: worker
     environment: 
       - REDIS_HOST=$REDIS_HOST
       - REDIS_PORT=$REDIS_PORT
   nginx_proxy:
-    image: "doc20az/multi-nginx"
+    image: "doc20az/multi-nginx:latest"
     mem_limit: 128m
     hostname: nginx_proxy
     ports:
