--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -28,8 +28,8 @@ services:
       - REDIS_PORT=6379
       - PGUSER=postgres
       - PGHOST=postgres
-      - PGDATABASE=fibvalues
-      - PGPASSWORD=postgrespassword
+      - PGDATABASE=postgres
+      - PGPASSWORD=postgres_password
       - PGPORT=5432
   client:
     stdin_open: true
