--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ deploy:
   bucket_name: 'elasticbeanstalk-us-east-2-712504446150'
   bucket_path: 'multi-containerized-app'
   on:
-    branch: main
+    branch: master
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
 
